--- a/stats/report.html
+++ b/stats/report.html
@@ -1,6 +1,6 @@
 
         <div>
             <h1>Analysis Output</h1>
-            <div>Team Man United won 18 games</div>
+            <div>Team Bournemouth won 18 games</div>
         </div>
         
